--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- help -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,7 @@
   <link rel="stylesheet" href="stylesheet.css">
 
   <!--Load font awesome here!-->
-  <link rel="stylesheet" href=""//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"">
-</head>
-<body>
+  <link rel="stylesheet" href=""//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css""> </head> <body>
   <header>
     <div class="container">
       <div class="header-left">
@@ -40,38 +39,37 @@
     <div class="container">
       <div class="heading">
         <h2>You Can Get Started Some where Here!</h2>
-      </div
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="txt-content">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+      </div <div class="lessons">
+      <div class="lesson">
+        <div class="lesson-icon">
+          <img src="https://prog-8.com/images/html/advanced/html.png">
+          <p>HTML & CSS</p>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="txt-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+        <p class="txt-content">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+      </div>
+      <div class="lesson">
+        <div class="lesson-icon">
+          <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+          <p>jQuery</p>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="txt-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used to build web applications.</p>
+        <p class="txt-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+      </div>
+      <div class="lesson">
+        <div class="lesson-icon">
+          <img src="https://prog-8.com/images/html/advanced/ruby.png">
+          <p>Ruby</p>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="txt-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+        <p class="txt-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used to build web applications.</p>
+      </div>
+      <div class="lesson">
+        <div class="lesson-icon">
+          <img src="https://prog-8.com/images/html/advanced/php.png">
+          <p>PHP</p>
         </div>
+        <p class="txt-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
       </div>
     </div>
+  </div>
   </div>
   <div class="message-wrapper">
     <div class="container">
@@ -84,20 +82,21 @@
   </div>
   <footer>
     <div class="container">
-    <div class="footer-logo">T<span>I</span>Tech Africa®</div>
-    <div class="footer-list">
-      <ul>
-        <li>About</li>
-        <li>Opportunities</li>
-        <li>Contact us</li>
-      </ul>
-      <!-- <img src="#">-->
-      <p><strong>The Igune Technologies Africa, ©2019</strong></p>
-      <p>Africa let's learn to code, let's become creative!</p>
-      <p>Contact: igunejustinerobert@gmail.com or justine@titechafrica.com</p>
-    </div>
+      <div class="footer-logo">T<span>I</span>Tech Africa®</div>
+      <div class="footer-list">
+        <ul>
+          <li>About</li>
+          <li>Opportunities</li>
+          <li>Contact us</li>
+        </ul>
+        <!-- <img src="#">-->
+        <p><strong>The Igune Technologies Africa, ©2019</strong></p>
+        <p>Africa let's learn to code, let's become creative!</p>
+        <p>Contact: igunejustinerobert@gmail.com or justine@titechafrica.com</p>
+      </div>
     </div>
 
   </footer>
-</body>
+  </body>
+
 </html>
