--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TITech Africa</title>
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="responsive.css" class="">
 
   <!--Load font awesome here!-->
   <link rel="stylesheet" href=""//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css""> </head> <body>
@@ -16,7 +17,10 @@
         <!--<img class="logo" src="#">-->
         <div class="header-logo">T<span>I</span>Tech Africa®</div>
       </div>
+      <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
+        <a href="#">Lessons</a>
+        <a href="#">Sign in</a>
         <a href="#" class="login">Log in</a>
       </div>
     </div>
@@ -90,7 +94,7 @@
           <li>Contact us</li>
         </ul>
         <!-- <img src="#">-->
-        <p><strong>The Igune Technologies Africa, ©2019</strong></p>
+        <p><strong>©2019. The Igune Technologies Africa.  </strong></p>
         <p>Africa let's learn to code, let's become creative!</p>
         <p>Contact: igunejustinerobert@gmail.com or justine@titechafrica.com</p>
       </div>
