--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="stylesheet" href="responsive.css" class="">
 
+  Login Form
   <!--Load font awesome here!-->
   <link rel="stylesheet" href=""//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css""> </head> <body>
   <header>
